[package]

name = "oak"
version = "0.8.0"
authors = [ "Pierre Talbot <ptalbot@hyc.io>" ]

description = "A typed parser generator syntax extension for Parsing Expression Grammar (PEG)."
repository = "https://github.com/ptal/oak"
documentation = "http://hyc.io/oak"
readme = "README.md"
keywords = ["parser", "peg", "grammar", "typing", "parsing"]
categories = ["parsing"]
license = "Apache-2.0"

[lib]

name = "oak"
path = "src/liboak/lib.rs"
proc_macro = true

[dev-dependencies.oak_runtime]
path = "runtime"
version = "0.6.0"

[dev-dependencies]
term = "0.5"

[dependencies]
partial = "^0.2.3"
proc-macro2 = { version = "1.0", features = ["nightly"] }
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
